# SkillBottle-Web

./: .gitignore  README.md  app.py  pyproject.toml
app/TEST/: index.html
app/clock/: index.html
app/palette/: index.html
app/tictactoe/: index.html
frontend/: app.js  index.html  styles.css
